# meganz-account-generator-mcp

./: .gitignore  Cargo.toml  readme.md
src/: app.rs  error.rs  main.rs  state.rs
src/handlers/: generate.rs  info.rs  initialize.rs  mod.rs  tool_call.rs  tools.rs
src/protocol/: error.rs  mod.rs  request.rs  response.rs
